// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderStatus renders correctly when invalid phone number 1`] = `
<div
  className="grid-x order-search"
>
  <div
    className="cell small-12 medium-8 large-6 order-status-info"
  >
    <h1>
      View Order Status
    </h1>
    <p>
      Enter your order information to see your order details. You can pay an open balance, see your delivery date, and check your delivery timeframe. History is available for orders created within the last 180 days.
    </p>
    <form
      className="grid-x cell small-12"
    >
      <span
        className="error"
      >
        Invalid phone number.
      </span>
      <label
        className="cell small-12"
      >
        Order Number (ex: 12345678i)
      </label>
      <input
        className="cell small-12"
        id="order_status_number"
        maxLength={20}
        name="order_number"
        onChange={[Function]}
        type="text"
      />
      <label
        className="cell small-12"
      >
        Phone Number (ex: 8135551234)
      </label>
      <input
        className="cell small-12 error"
        name="order_phone_number"
        onChange={[Function]}
        type="tel"
      />
      <button
        className="primary"
        onClick={[Function]}
      >
        Find Order
      </button>
    </form>
  </div>
  <div
    className="cell small-12 medium-4 large-6 help-text"
  >
    <div
      className="background-box"
    >
      <h2>
        Need Help?
      </h2>
      <br />
      <p>
        Customer Care Center:
        <br />
        <a
          href="tel:(800) 766-6786"
        >
           (800) 766-6786
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`OrderStatus renders correctly when loading 1`] = `
<div
  className="grid-x order-search"
>
  <div
    className="cell small-12 medium-8 large-6 order-status-info"
  >
    <h1>
      View Order Status
    </h1>
    <p>
      Enter your order information to see your order details. You can pay an open balance, see your delivery date, and check your delivery timeframe. History is available for orders created within the last 180 days.
    </p>
    <form
      className="grid-x cell small-12"
    >
      <label
        className="cell small-12"
      >
        Order Number (ex: 12345678i)
      </label>
      <input
        className="cell small-12"
        id="order_status_number"
        maxLength={20}
        name="order_number"
        onChange={[Function]}
        type="text"
      />
      <label
        className="cell small-12"
      >
        Phone Number (ex: 8135551234)
      </label>
      <input
        className="cell small-12"
        name="order_phone_number"
        onChange={[Function]}
        type="tel"
      />
      <button
        className="primary"
        onClick={[Function]}
      >
        <img
          alt="loading matching orders"
          className="loader"
          src={Object {}}
        />
      </button>
    </form>
  </div>
  <div
    className="cell small-12 medium-4 large-6 help-text"
  >
    <div
      className="background-box"
    >
      <h2>
        Need Help?
      </h2>
      <br />
      <p>
        Customer Care Center:
        <br />
        <a
          href="tel:(800) 766-6786"
        >
           (800) 766-6786
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`OrderStatus renders correctly when other error 1`] = `
<div
  className="grid-x order-search"
>
  <div
    className="cell small-12 medium-8 large-6 order-status-info"
  >
    <h1>
      View Order Status
    </h1>
    <p>
      Enter your order information to see your order details. You can pay an open balance, see your delivery date, and check your delivery timeframe. History is available for orders created within the last 180 days.
    </p>
    <form
      className="grid-x cell small-12"
    >
      <span
        className="error"
      >
        We are unable.
      </span>
      <label
        className="cell small-12"
      >
        Order Number (ex: 12345678i)
      </label>
      <input
        className="cell small-12"
        id="order_status_number"
        maxLength={20}
        name="order_number"
        onChange={[Function]}
        type="text"
      />
      <label
        className="cell small-12"
      >
        Phone Number (ex: 8135551234)
      </label>
      <input
        className="cell small-12"
        name="order_phone_number"
        onChange={[Function]}
        type="tel"
      />
      <button
        className="primary"
        onClick={[Function]}
      >
        Find Order
      </button>
    </form>
  </div>
  <div
    className="cell small-12 medium-4 large-6 help-text"
  >
    <div
      className="background-box"
    >
      <h2>
        Need Help?
      </h2>
      <br />
      <p>
        Customer Care Center:
        <br />
        <a
          href="tel:(800) 766-6786"
        >
           (800) 766-6786
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`OrderStatus renders correctly with default props 1`] = `
<div
  className="grid-x order-search"
>
  <div
    className="cell small-12 medium-8 large-6 order-status-info"
  >
    <h1>
      View Order Status
    </h1>
    <p>
      Enter your order information to see your order details. You can pay an open balance, see your delivery date, and check your delivery timeframe. History is available for orders created within the last 180 days.
    </p>
    <form
      className="grid-x cell small-12"
    >
      <label
        className="cell small-12"
      >
        Order Number (ex: 12345678i)
      </label>
      <input
        className="cell small-12"
        id="order_status_number"
        maxLength={20}
        name="order_number"
        onChange={[Function]}
        type="text"
      />
      <label
        className="cell small-12"
      >
        Phone Number (ex: 8135551234)
      </label>
      <input
        className="cell small-12"
        name="order_phone_number"
        onChange={[Function]}
        type="tel"
      />
      <button
        className="primary"
        onClick={[Function]}
      >
        Find Order
      </button>
    </form>
  </div>
  <div
    className="cell small-12 medium-4 large-6 help-text"
  >
    <div
      className="background-box"
    >
      <h2>
        Need Help?
      </h2>
      <br />
      <p>
        Customer Care Center:
        <br />
        <a
          href="tel:(800) 766-6786"
        >
           (800) 766-6786
        </a>
      </p>
    </div>
  </div>
</div>
`;
